<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingEnd="10dp"
    android:paddingStart="10dp"
    android:paddingTop="10dp"
    tools:context="com.assignments.francisco.coolblueassignment.presentation.view.fragment.ProductsFragment">

    <LinearLayout
        android:id="@+id/search_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/search_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:background="@drawable/search_back"
            android:hint="@string/search_box_hint"
            android:paddingEnd="10dp"
            android:paddingStart="10dp" />

        <Button
            android:id="@+id/search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="5dp"
            android:layout_weight="3"
            android:text="@string/search_button_text"
            android:textSize="12sp" />
    </LinearLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/filter_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/search_view">

        <TextView
            android:id="@+id/price_filter_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:gravity="left"
            android:text="@string/price_filter_label_default"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/min_price_filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="5dp"
            android:background="@drawable/filter_back"
            android:hint="@string/minimum_price_hint"
            android:imeOptions="actionDone"
            android:inputType="numberDecimal"
            android:padding="5dp"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/max_price_filter"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/price_filter_label" />

        <EditText
            android:id="@+id/max_price_filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="10dp"
            android:background="@drawable/filter_back"
            android:hint="@string/maximum_price_hint"
            android:imeOptions="actionDone"
            android:inputType="numberDecimal"
            android:padding="5dp"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/min_price_filter" />
    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:divider="@drawable/list_divider"
        android:orientation="vertical"
        android:showDividers="middle"
        app:layout_constraintTop_toBottomOf="@id/filter_view"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/showing_items_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="16sp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/products_recycler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />
    </LinearLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/loading_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.qintong.library.InsLoadingView
            android:id="@+id/loader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/coolblue_logo"
            app:layout_constraintEnd_toEndOf="@id/loading_view"
            app:layout_constraintStart_toStartOf="@id/loading_view"
            app:layout_constraintTop_toTopOf="@id/loading_view" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/loader_searching_products"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/loader" />


    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/error_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/loading_view"
        app:layout_constraintStart_toStartOf="@id/loading_view"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/error_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/error_sign"
            app:layout_constraintEnd_toEndOf="@id/error_view"
            app:layout_constraintStart_toStartOf="@id/error_view"
            app:layout_constraintTop_toTopOf="@id/error_view" />

        <TextView
            android:id="@+id/error_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/problem_contacting_server"
            android:textColor="@android:color/darker_gray"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/error_image" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/info_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/loading_view"
        app:layout_constraintStart_toStartOf="@id/loading_view"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/info_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/info_sign"
            app:layout_constraintEnd_toEndOf="@id/info_view"
            app:layout_constraintStart_toStartOf="@id/info_view"
            app:layout_constraintTop_toTopOf="@id/info_view" />

        <TextView
            android:id="@+id/info_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/info_no_items"
            android:textColor="@android:color/darker_gray"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/info_image" />

    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>