<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/toolbar_filter"
        android:icon="@drawable/ic_filter_disabled"
        android:orderInCategory="200"
        android:title="Search"
        app:showAsAction="ifRoom" />
</menu>